--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,6 @@ dependencies = [
     "rich>=14.1.0",
     "structlog>=25.4.0",
     "tabulate>=0.9.0",
+    "flask>=3.0.0",
+    "flask-cors>=4.0.0",
 ]
